Sat Sep 11 17:46:37 BST 1999 Andy Thomas <alt@gimp.org>

	* app/palette.c

	When resizing the dialog it now fills with colours (as expected).

Sat Sep 11 17:02:06 CEST 1999  Olof S Kylander <olof@frozenriver.com>

	* plug-ins/pygimp/gimpenums.py: Fix of enum error
	  XX_IMAGE_FILL in two locations and didn't include
	  all fill "modes".

Fri Sep 10 18:36:34 EDT 1999  Austin Donnelly  <austin@gimp.org>

	* plug-ins/common/png.c: cheesy fix for INDEXEDA core dump: popup
	    a window saying we can't handle it.  We should really handle
	    it though.

Thu Sep  9 21:29:16 PDT 1999 Manish Singh <yosh@gimp.org>

	* Made 1.1.9 release

Fri Sep 10 00:18:17 EDT 1999 Adrian Likins <adrian@gimp.org>

	* app/paintbrush.c:  Make gradient brushes work again.

1999-09-09  Kelly Lynn Martin  <kelly@poverty.bloomington.in.us>

	* plug-ins/FractalExplorer/Callbacks.[ch]
	* plug-ins/FractalExplorer/Dialogs.[ch]
	* plug-ins/FractalExplorer/FractalExplorer.[ch]
	* plug-ins/FractalExplorer/Globals.c
	* plug-ins/FractalExplorer/Languages.[ch]: added support for
	variable-size colormap (up to 8192 colors) and "log log" smoothing 
	(see http://linas.org/art-gallery/escape/smooth.html).

Thu Sep  9 18:52:28 CDT 1999 James Mitchell <mitchell@gimp.org>

	* tips/gimp_tips.it.txt
	* tips/Makefile.am: Added tips translations from Daniele Medri
			    <madrid@linux.it>

Thu Sep  9 15:45:20 PDT 1999 Manish Singh <yosh@gimp.org>

	* plug-ins/common/rotate.c: i18n buglet fix

Fri Sep 10 00:28:34 CEST 1999  vidar@prosalg.no  (Vidar Madsen)

	* plug-ins/gimpressionist/*.[ch]: switched to G_PIs and RAND_FUNC()s

Thu Sep  9 15:12:36 PDT 1999 Manish Singh <yosh@gimp.org>

	* plug-ins/imagemap/imap_polygon.c: fix gccism

Thu Sep  9 22:23:06 CET 1999  vidar@prosalg.no  (Vidar Madsen)

	* plug-ins/common/spheredesigner.c: Various fixes/enhancements

	* plug-ins/gimpressionist/ChangeLog
	* plug-ins/gimpressionist/Makefile.am
	* plug-ins/gimpressionist/*.[ch]: Added Color options (new file color.c)
